api/src/main/java/com/example/api/error/exception/EntityAlreadyInDatabaseException.java
package com.example.api.error.exception;

public class EntityAlreadyInDatabaseException extends Exception{

    public EntityAlreadyInDatabaseException(String message) {
        super(message);
    }
}
